# PS2RichPresence

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
.github/workflows/: build_release.yml
src/: RichPresence.c  RichPresence.h  SambaReader.c  SambaReader.h  main.c  types.h
